log/build_2026-03-30_20-30-54/pioneer/stderr.log
  File "/home/jeremy/Resources/install/pioneer/lib/python3.12/site-packages/pioneer/velocity_publisher.py", line 137
    if !ranges:
       ^
SyntaxError: invalid syntax

